--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "co.com.autolagos.rtaxi.local.driver"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -21,59 +23,73 @@ android {
         maven { url "https://jitpack.io" }
         mavenCentral()
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:design:28.0.0-rc02'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:multidex:1.0.3'
-
     //Firebase
-    implementation 'com.google.firebase:firebase-core:16.0.3'
-    implementation 'com.google.firebase:firebase-database:16.0.2'
-    implementation 'com.google.firebase:firebase-auth:16.0.3'
-    implementation 'com.google.firebase:firebase-messaging:17.3.1'
-
+    implementation 'com.google.firebase:firebase-core:+'
+    implementation 'com.google.firebase:firebase-database:+'
+    implementation 'com.google.firebase:firebase-auth:+'
+    implementation 'com.google.firebase:firebase-messaging:+'
+    implementation 'com.crashlytics.sdk.android:crashlytics:+'
     //View Libraries
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.mikhaellopez:circularfillableloaders:1.3.2'
-
+    implementation 'com.github.jd-alexander:library:1.1.0'
     // RxJava2 Dependencies
-    implementation "io.reactivex.rxjava2:rxjava:2.2.0"
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-
     //Permissions
     implementation 'com.github.tajchert:nammu:1.2.0'
-
     //View Binding
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
+    implementation('com.jakewharton:butterknife:9.0.0-rc2') {
+        exclude group: 'com.android.support'
+        exclude module: 'appcompat-v7'
+        exclude module: 'support-v4'
+    }
+    implementation 'com.android.support:support-v4:28.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
     //Dialog
     implementation 'cn.pedant.sweetalert:library:1.3'
-
     //Google Services
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
-
     //Utils
     implementation 'com.squareup:otto:1.3.8'
     implementation 'com.google.code.gson:gson:2.8.5'
-
     //Network
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
-
     //Tests
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-}
+    implementation 'com.kelvinapps:rxfirebase:0.0.15'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'com.google.dagger:dagger:2.13'
+    annotationProcessor('com.google.dagger:dagger-compiler:2.13') {
+        exclude group: 'com.android.support'
+        exclude module: 'appcompat-v7'
+        exclude module: 'support-v4'
+    }
 
-apply plugin: 'com.google.gms.google-services'
+
+    implementation 'com.github.zellius:rxlocationmanager-rxjava2:1.0.0'
+    implementation 'com.google.firebase:firebase-config:+'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'com.google.firebase:firebase-functions:16.1.3'
+    implementation 'com.ncorti:slidetoact:0.5.1'
+
+
+}
